--- a/web-crawler/pom.xml
+++ b/web-crawler/pom.xml
@@ -39,16 +39,9 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.10</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>uk.org.lidalia</groupId>
-			<artifactId>lidalia-slf4j-ext</artifactId>
-			<version>1.0.0</version>
-			<scope>compile</scope>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
