Changes to logging. Change in the way input params were read. Input now loads from a different file rather command line args.

--- a/web-crawler/pom.xml
+++ b/web-crawler/pom.xml
@@ -31,6 +31,12 @@
 						</goals>
 						<configuration>
 							<finalName>webcrawler</finalName>
+							<appendAssemblyId>false</appendAssemblyId>
+							<archive>
+								<manifest>
+									<mainClass>com.imaginea.crawler.MyCrawler</mainClass>
+								</manifest>
+							</archive>
 						</configuration>
 					</execution>
 				</executions>
